2012-02-19  Holger Vogt
 * com_cdump.c, commands.c, main.c:
   dummy functions for SMPprint() and SMPprintRHS() to allow making of ngnutmeg,
   small updates, comments

2012-02-19  Dietmar Warning
 * src/spicelib/devices/asrc/*.c,*.h
 * src/frontend/inpcom.c,
   Add reciprocal temperature behaviour for B sources used for nonlinear
   resistors, capacitors and inductors (the latter non-reciprocal)

2012-02-19  Holger Vogt
 * com_cdump.c, com_cdump.h, commands.c, smpdefs.h, spoutput.c, spsmp.c,
   command mrdump to dump the RHS of the matrix to stdout or to a file

2012-02-19  Holger Vogt
 * spiceif.c: savesnap, loadsnap enabled (still experimental!)
 * com_cdump.c, com_cdump.h, commands.c, smpdefs.h, spoutput.c, spsmp.c,
   cktpzstr.c, txlload.c: command mdump to dump the matrix to stdout or to a file

2012-02-11  Dietmar Warning
 * src/spicelib/devices/asrc/*.c,*.h,Makefile.am
 * src/frontend/inpcom.c,
 * vngspice.vcproj
   Add temperature coefficients for B sources

2012-02-11  Holger Vogt
 * inpcom.c: Robert's patch, reading libs, incs etc.
 
2012-02-11  Holger Vogt
 * tclspice.c, winmain.c, outitf.c, vectors.c, alloc.c:
   outheap (under Windows) removed
   
2012-02-11  Holger Vogt
 * ngspice.h: fprintf --> tcl_fprintf added 
 * tclspice.c: small updates for Windows 
 * outitf.c, vectors.c, alloc.c:
   outheap (under Windows) provided, but deactivated

2012-02-11  Robert Larice
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
   update bison generated files

2012-02-11  Robert Larice
 * src/spicelib/parser/inpptree-parser.y ,
 * src/spicelib/parser/inpptree.c :
   upgrade INPgetTree()
     this parser did parse the *whole* line,
     now it parses as much as it can, and passes the rest back in arg `line'

2012-02-10   Holger Vogt / (Robert Larice)
 * src/frontend/cpitf.c :
   search for tclspinit in `cwd' as well

2012-02-10   Holger Vogt / (Robert Larice)
 * src/frontend/postcoms.c :
   NG_IGNORE something
